[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/hamburger-menu-icon.svg" type="Texture" id=1]
[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/theme/Barlow-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/tools/scroll_container_scrollbar_claim_space.gd" type="Script" id=4]
[ext_resource path="res://components/node_list/node_list_element.gd" type="Script" id=5]
[ext_resource path="res://scripts/tools/right_click_copy.gd" type="Script" id=6]
[ext_resource path="res://assets/search-blue-01.svg" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.091, 0.11245, 0.13, 1 )
border_color = Color( 0.0588235, 0.2, 0.337255, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=6]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="NodeListElement" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 10
custom_constants/margin_top = 40
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 5 )

[node name="Margin" type="MarginContainer" parent="."]
margin_left = 10.0
margin_top = 40.0
margin_right = 1910.0
margin_bottom = 1070.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1890.0
margin_bottom = 1020.0
mouse_filter = 2

[node name="TitleBar" type="HBoxContainer" parent="Margin/VBox"]
margin_right = 1880.0
margin_bottom = 39.0
mouse_filter = 2
custom_constants/separation = 10

[node name="Icon" type="TextureRect" parent="Margin/VBox/TitleBar"]
modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_right = 30.0
margin_bottom = 39.0
rect_min_size = Vector2( 30, 0 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="ParentNodeButton" type="Button" parent="Margin/VBox/TitleBar"]
margin_left = 40.0
margin_right = 105.0
margin_bottom = 39.0
text = "Cloud"

[node name="KindLabelArrow" type="Label" parent="Margin/VBox/TitleBar"]
margin_left = 115.0
margin_top = 9.0
margin_right = 123.0
margin_bottom = 30.0
text = ">"
valign = 1

[node name="KindNameLabel" type="Label" parent="Margin/VBox/TitleBar"]
margin_left = 133.0
margin_right = 306.0
margin_bottom = 39.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "Group Name"
script = ExtResource( 6 )

[node name="HSeparator" type="HSeparator" parent="Margin/VBox"]
modulate = Color( 1, 1, 1, 0.501961 )
margin_top = 43.0
margin_right = 1880.0
margin_bottom = 47.0

[node name="Filter" type="HBoxContainer" parent="Margin/VBox"]
margin_top = 51.0
margin_right = 1880.0
margin_bottom = 86.0
mouse_filter = 2
custom_constants/separation = 10

[node name="FilterLineEdit" type="LineEdit" parent="Margin/VBox/Filter"]
margin_right = 400.0
margin_bottom = 35.0
rect_min_size = Vector2( 400, 0 )
size_flags_vertical = 4
theme = ExtResource( 2 )
clear_button_enabled = true
right_icon = ExtResource( 8 )
placeholder_text = "filter results"
placeholder_alpha = 0.3

[node name="MainPanel" type="PanelContainer" parent="Margin/VBox"]
show_behind_parent = true
margin_top = 90.0
margin_right = 1880.0
margin_bottom = 1010.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 5 )

[node name="ScrollContainer" type="ScrollContainer" parent="Margin/VBox/MainPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1876.0
margin_bottom = 916.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false
script = ExtResource( 4 )

[node name="Content" type="MarginContainer" parent="Margin/VBox/MainPanel/ScrollContainer"]
margin_right = 1872.0
margin_bottom = 912.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="ListContainer" type="VBoxContainer" parent="Margin/VBox/MainPanel/ScrollContainer/Content"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1867.0
margin_bottom = 907.0

[node name="Templates" type="Control" parent="."]
visible = false
margin_left = 10.0
margin_top = 40.0
margin_right = 1910.0
margin_bottom = 1070.0

[node name="ResultTemplate" type="Button" parent="Templates"]
margin_left = 19.0
margin_top = 70.0
margin_right = 1901.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 50 )

[node name="Result" type="VBoxContainer" parent="Templates/ResultTemplate"]
margin_left = 4.0
margin_top = 4.0
margin_right = 396.0
margin_bottom = 50.0
rect_clip_content = true

[node name="ResultName" type="Label" parent="Templates/ResultTemplate/Result"]
margin_right = 392.0
margin_bottom = 21.0
text = "Result Name"
clip_text = true

[node name="ResultDetails" type="Label" parent="Templates/ResultTemplate/Result"]
margin_top = 25.0
margin_right = 392.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0.236435, 0.58671, 0.796875, 1 )
custom_fonts/font = SubResource( 6 )
text = "Result Details"
clip_text = true

[connection signal="pressed" from="Margin/VBox/TitleBar/ParentNodeButton" to="." method="_on_ParentNodeButton_pressed"]
[connection signal="text_changed" from="Margin/VBox/Filter/FilterLineEdit" to="." method="_on_FullTextSearch_text_changed"]
