[gd_scene load_steps=14 format=2]

[ext_resource path="res://components/elements/styled/style_color_auto_remap.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=2]
[ext_resource path="res://components/elements/styled/icon_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/tools/scroll_container_scrollbar_claim_space_vertical.gd" type="Script" id=4]
[ext_resource path="res://components/node_list/node_list_element.gd" type="Script" id=5]
[ext_resource path="res://assets/icons/icon_128_arrow.svg" type="Texture" id=6]
[ext_resource path="res://assets/icons/icon_128_node_element.svg" type="Texture" id=7]
[ext_resource path="res://assets/icons/search-blue-01.svg" type="Texture" id=8]
[ext_resource path="res://assets/theme/Barlow-Bold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/icons/icon_128_exit.svg" type="Texture" id=10]
[ext_resource path="res://scripts/tools/left_click_copy.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=8]
size = 23
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxEmpty" id=9]

[node name="NodeListElement" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 5 )

[node name="Margin" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1910.0
margin_bottom = 1070.0
mouse_filter = 2
custom_constants/separation = 10

[node name="TitleBar" type="HBoxContainer" parent="Margin/VBox"]
margin_right = 1900.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
mouse_filter = 2
custom_constants/separation = 10

[node name="IconButton" parent="Margin/VBox/TitleBar" instance=ExtResource( 3 )]
margin_top = 3.0
margin_bottom = 36.0
hint_tooltip = "Back to single Node"
size_flags_vertical = 4
icon_tex = ExtResource( 10 )
flip_h = true

[node name="NodeIcon" type="TextureRect" parent="Margin/VBox/TitleBar"]
visible = false
modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_right = 34.0
margin_bottom = 39.0
rect_min_size = Vector2( 34, 39 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="AllKindsLabel" type="Label" parent="Margin/VBox/TitleBar"]
unique_name_in_owner = true
visible = false
margin_top = 2.0
margin_right = 32.0
margin_bottom = 30.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 8 )
text = "All "

[node name="NodeKindButton" type="Button" parent="Margin/VBox/TitleBar"]
unique_name_in_owner = true
margin_left = 43.0
margin_top = 4.0
margin_right = 164.0
margin_bottom = 36.0
size_flags_vertical = 4
theme_type_variation = "ButtonKindLabel"
text = "Node Kind"

[node name="ParentNodeButton" type="Button" parent="Margin/VBox/TitleBar"]
margin_left = 174.0
margin_top = 3.0
margin_right = 282.0
margin_bottom = 36.0
size_flags_vertical = 4
text = "Node Name"

[node name="ArrowIconMid" type="TextureRect" parent="Margin/VBox/TitleBar"]
unique_name_in_owner = true
modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_left = 292.0
margin_top = 8.0
margin_right = 316.0
margin_bottom = 32.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 6 )
expand = true
script = ExtResource( 1 )

[node name="ListKindButton" type="Button" parent="Margin/VBox/TitleBar"]
unique_name_in_owner = true
margin_left = 326.0
margin_top = 4.0
margin_right = 447.0
margin_bottom = 36.0
size_flags_vertical = 4
theme_type_variation = "ButtonKindLabel"
text = "Node Kind"

[node name="SearchTypeLabel" type="Label" parent="Margin/VBox/TitleBar"]
unique_name_in_owner = true
visible = false
margin_left = 457.0
margin_top = 6.0
margin_right = 611.0
margin_bottom = 34.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 8 )
text = "All Successors"
script = ExtResource( 11 )

[node name="HSeparator" type="HSeparator" parent="Margin/VBox"]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
margin_top = 50.0
margin_right = 1900.0
margin_bottom = 54.0

[node name="Filter" type="HBoxContainer" parent="Margin/VBox"]
margin_top = 50.0
margin_right = 1900.0
margin_bottom = 85.0
mouse_filter = 2
custom_constants/separation = 10

[node name="Label" type="Label" parent="Margin/VBox/Filter"]
margin_top = 7.0
margin_right = 92.0
margin_bottom = 28.0
text = "Filter results"

[node name="FilterLineEdit" type="LineEdit" parent="Margin/VBox/Filter"]
margin_left = 102.0
margin_right = 502.0
margin_bottom = 35.0
rect_min_size = Vector2( 400, 0 )
size_flags_vertical = 4
theme = ExtResource( 2 )
clear_button_enabled = true
right_icon = ExtResource( 8 )
placeholder_text = "filter results"
placeholder_alpha = 0.3

[node name="MainPanel" type="PanelContainer" parent="Margin/VBox"]
show_behind_parent = true
margin_top = 95.0
margin_right = 1900.0
margin_bottom = 1060.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 9 )

[node name="ScrollContainer" type="ScrollContainer" parent="Margin/VBox/MainPanel"]
margin_right = 1900.0
margin_bottom = 965.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false
script = ExtResource( 4 )

[node name="Content" type="MarginContainer" parent="Margin/VBox/MainPanel/ScrollContainer"]
margin_right = 1900.0
margin_bottom = 965.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="ListContainer" type="VBoxContainer" parent="Margin/VBox/MainPanel/ScrollContainer/Content"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1895.0
margin_bottom = 960.0

[connection signal="pressed" from="Margin/VBox/TitleBar/IconButton" to="." method="_on_IconButton_pressed"]
[connection signal="pressed" from="Margin/VBox/TitleBar/NodeKindButton" to="." method="_on_NodeKindButton_pressed"]
[connection signal="pressed" from="Margin/VBox/TitleBar/ParentNodeButton" to="." method="_on_ParentNodeButton_pressed"]
[connection signal="pressed" from="Margin/VBox/TitleBar/ListKindButton" to="." method="_on_ListKindButton_pressed"]
[connection signal="text_changed" from="Margin/VBox/Filter/FilterLineEdit" to="." method="_on_FullTextSearch_text_changed"]
